--- a/angular.json
+++ b/angular.json
@@ -128,6 +128,10 @@
               "devServerTarget": "pwa-demo:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
